force-app/main/default/objects/NI_Security_Incident_Response_Record__c/NI_Security_Incident_Response_Record__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-010510

Used by IT and Security Compliance to log security incidents</description>
    <label>NI Security Incident Response Record</label>
    <nameField>
        <displayFormat>SIRR-{00000}</displayFormat>
        <label>Security Incident Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI Security Incident Response Record</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>