force-app/main/default/objects/NI_Security_Incident_Response_Record__c/fields/Action_Item__c.field-meta.xml
<CustomField>
    <fullName>Action_Item__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Item</label>
    <type>TextArea</type>
</CustomField>