force-app/main/default/objects/NI_Security_Incident_Response_Record__c/fields/Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>