force-app/main/default/objects/NI_Security_Incident_Response_Record__c/fields/Incident_Classification__c.field-meta.xml
<CustomField>
    <fullName>Incident_Classification__c</fullName>
    <label>Incident Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>