force-app/main/default/objects/NI_Security_Incident_Response_Record__c/fields/Incident_Detection__c.field-meta.xml
<CustomField>
    <fullName>Incident_Detection__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incident Detection</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>