force-app/main/default/objects/NI_Security_Incident_Response_Record__c/fields/Incident_Recovery_Process__c.field-meta.xml
<CustomField>
    <fullName>Incident_Recovery_Process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incident Recovery Process</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>