force-app/main/default/objects/NI_Security_Incident_Response_Record__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>NI_Location__c</referenceTo>
    <relationshipLabel>NI Security Incident Response Record</relationshipLabel>
    <relationshipName>NI_Security_Incident_Response_Record</relationshipName>
    <type>Lookup</type>
</CustomField>