force-app/main/default/objects/NI_Security_Incident_Response_Record__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <formula>Location__r.Location_Name__c</formula>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>