force-app/main/default/objects/NI_Security_Incident_Response_Record__c/fields/Users_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Users_Impacted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Users Impacted</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>