force-app/main/default/objects/NI_Security_Incident_Response_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Classification__c</columns>
    <columns>Incident_Detection__c</columns>
    <columns>Incident_Status__c</columns>
    <columns>Incident_Summary__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>